# NLP-project

erasmusplanner/: .gitignore  README.md  erasmus_learning_agreement.md  pyproject.toml
erasmusplanner/deployment/backend/: main.py  requirements.txt
erasmusplanner/deployment/frontend/: package-lock.json  package.json
erasmusplanner/deployment/frontend/src/: App.vue
erasmusplanner/deployment/frontend/src/components/: ChatInterface.vue
erasmusplanner/deployment/nlp/: index.html  package-lock.json
erasmusplanner/deployment/nlp/src/: App.vue
erasmusplanner/deployment/nlp/src/components/: ChatInterface.vue
erasmusplanner/knowledge/: user_preference.txt
erasmusplanner/src/erasmusplanner/: crew.py  erasmus_data.json  main.py  ui_state.py
erasmusplanner/src/erasmusplanner/config/: agents.yaml  tasks.yaml
erasmusplanner/src/erasmusplanner/tools/: human_input_tool.py  validation_tool.py
